--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,17 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Options
+
+@inject IOptions<RequestLocalizationOptions> LocOptions;
+@{
+    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
+    var cultureItems = LocOptions.Value.SupportedUICultures
+                        .Select(c => new SelectListItem { Value = c.Name, Text = c.DisplayName })
+                        .ToList();
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,13 +45,15 @@
     <script src="//at.alicdn.com/t/c/font_2344911_462ux66iuo.js"></script>
     <!--有些js会有冲突导致报错，无法加载组件，可在页面单独处理-->
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
-    <script src ="~/_framework/blazor.server.js"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">ToolApp</a>
+            </div>
+            <div title="@requestCulture?.Provider?.GetType().Name">
+                <select onchange="HandleChange" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
             </div>
         </nav>
     </header>
@@ -52,4 +67,5 @@
         </div>
     </footer>
 </body>
+<script src ="~/_framework/blazor.server.js"></script>
 </html>
