--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -103,6 +103,22 @@
             </li>
         </ul>
     </div>
+
+    @* 效率工具 *@
+     <div>
+        <div class="TypeTitle">@ViewLocalizer["Productivity Tools"]</div>
+        <ul class="ul_tools">
+            <li class="li_tool">
+                <a href="./ProductiviryTools/Pomodoro" class="a_tool">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-bangong"></use>
+                    </svg>
+                    <span class="sp_toolname">@ViewLocalizer["Pomodoro"]</span>
+               </a>
+            </li>
+        </ul>
+    </div>
+
     <div>
         <div class="TypeTitle">@ViewLocalizer["Conversion Tool"]</div>
         <ul class="ul_tools">
@@ -233,22 +249,6 @@
                         <use xlink:href="#icon-bangong"></use>
                     </svg>
                     <span class="sp_toolname">@ViewLocalizer["Ip Query"]</span>
-               </a>
-            </li>
-            <li class="li_tool">
-                <a href="./QueryTools/GetImages" class="a_tool">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-tupian"></use>
-                    </svg>
-                    <span class="sp_toolname">@ViewLocalizer["One Click Download Of Images"]</span>
-               </a>
-            </li>
-            <li class="li_tool">
-                <a href="./QueryTools/GetPreferentialProducts" class="a_tool">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-bianxian"></use>
-                    </svg>
-                    <span class="sp_toolname">@ViewLocalizer["Coupon Inquiry"]</span>
                </a>
             </li>
             <li class="li_tool">
