--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -4,5 +4,6 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.JSInterop
 @using ToolApp
